--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -9,3 +9,4 @@ Remember me: Remember me
 Sign in: Sign in
 Register now: Register now it's free!
 Not registered?: Still not registered?
+Log out: Log out
