--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -9,3 +9,4 @@ Remember me: Rester connecter
 Sign in: Identification
 Register now: Créez un compte, c'est gratuit!
 Not registered?: Pas encore enregistré?
+Log out: Se déconnecter
